"sua chut giao dien"

--- a/SIMS.WebApp/Views/Classroom/Details.cshtml
+++ b/SIMS.WebApp/Views/Classroom/Details.cshtml
@@ -111,6 +111,7 @@
                     {
                         <div class="form-group mt-3">
                             <button type="submit" class="btn btn-danger">Remove Selected Students</button>
+                            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
                         </div>
                     }
                 </form>
