--- a/SIMS.WebApp/Views/Shared/_Layout.cshtml
+++ b/SIMS.WebApp/Views/Shared/_Layout.cshtml
@@ -72,19 +72,19 @@
                 <li class="nav-item @(currentController == "Classroom" ? "active" : "")">
                     <a class="nav-link" asp-controller="Classroom" asp-action="Index">
                         <i class="fas fa-fw fa-school"></i>
-                        <span>Classroom Mngmt</span>
+                        <span>Classroom Management</span>
                     </a>
                 </li>
                 <li class="nav-item @(currentController == "Courses" ? "active" : "")">
                     <a class="nav-link" asp-controller="Courses" asp-action="Index">
                         <i class="fas fa-fw fa-book"></i>
-                        <span>Course Mngmt</span>
+                        <span>Course Management</span>
                     </a>
                 </li>
                 <li class="nav-item @(currentController == "Students" ? "active" : "")">
                     <a class="nav-link" asp-controller="Students" asp-action="Index">
                         <i class="fas fa-fw fa-user-graduate"></i>
-                        <span>Student Mngmt</span>
+                        <span>Student Management</span>
                     </a>
                 </li>
             }
