--- a/SIMS.WebApp/Views/Students/Index.cshtml
+++ b/SIMS.WebApp/Views/Students/Index.cshtml
@@ -2,9 +2,12 @@
 
 <h1>Student List</h1>
 
-<p>
-    <a asp-action="Create" class="btn btn-primary">Create New Student</a>
-</p>
+@if (User.IsInRole("Admin"))
+{
+    <p>
+        <a asp-action="Create" class="btn btn-primary">Create New Student</a>
+    </p>
+}
 
 <table class="table table-hover">
     <thead class="thead-light">
@@ -36,12 +39,17 @@
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@student.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@student.Id">Details</a> |
-                    <form asp-action="Delete" method="post" class="d-inline delete-form-trigger"
-                          data-message="Are you sure you want to delete the student '@student.FullName'?">
-                        <input type="hidden" name="id" value="@student.Id" />
-                        <button type="submit" class="button-as-link">Delete</button>
-                    </form>
+                    <a asp-action="Details" asp-route-id="@student.Id">Details</a>
+
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <text> | </text>
+                        <form asp-action="Delete" method="post" class="d-inline delete-form-trigger"
+                              data-message="Are you sure you want to delete the student '@student.FullName'?">
+                            <input type="hidden" name="id" value="@student.Id" />
+                            <button type="submit" class="button-as-link">Delete</button>
+                        </form>
+                    }
                 </td>
             </tr>
         }
