--- a/SIMS.WebApp/Views/Courses/Index.cshtml
+++ b/SIMS.WebApp/Views/Courses/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Quản Lý Khóa Học</h1>
+<h1>Course Management</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New Course</a>
