--- a/SIMS.WebApp/Views/UserManagement/Index.cshtml
+++ b/SIMS.WebApp/Views/UserManagement/Index.cshtml
@@ -7,6 +7,16 @@
 
 <h1>User Management</h1>
 
+@if (TempData["CannotDeleteMessage"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["CannotDeleteMessage"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+
 <form asp-action="Index" method="get" class="mb-3">
     <div class="row">
         <div class="col-md-4">
