--- a/SIMS.WebApp/Views/Students/Index.cshtml
+++ b/SIMS.WebApp/Views/Students/Index.cshtml
@@ -2,6 +2,16 @@
 
 <h1>Student List</h1>
 
+@if (TempData["CannotDeleteMessage"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["CannotDeleteMessage"]
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+}
+
 @if (User.IsInRole("Admin"))
 {
     <p>
@@ -21,7 +31,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.First().Email)
             </th>
-            <th></th> <!-- Column for action buttons -->
+            <th></th>
         </tr>
     </thead>
     <tbody>
