--- a/SIMS.WebApp/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SIMS.WebApp/Areas/Identity/Pages/Account/Login.cshtml
@@ -3,7 +3,7 @@
 
 @{
     ViewData["Title"] = "Log in";
-    Layout = "~/Views/Shared/_LoginLayout.cshtml"; // Sử dụng layout mới
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 <div class="text-center">
@@ -11,7 +11,9 @@
 </div>
 
 <form id="account" method="post">
-    <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+    @* THAY ĐỔI TỪ "ModelOnly" THÀNH "All" *@
+    <div asp-validation-summary="All" class="text-danger" role="alert"></div>
+
     <div class="form-group">
         <input asp-for="Input.Email" class="form-control form-control-user" autocomplete="username" aria-required="true" placeholder="Enter Email Address..." />
         <span asp-validation-for="Input.Email" class="text-danger"></span>
